--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
 <!-- =^..^= Created by JZimz. Learn more at jzimz.com -->
+---
+layout: default
+title: My Page
+---
 <!DOCTYPE html>
 <html lang="en">
   <head>
