--- a/index.html
+++ b/index.html
@@ -96,29 +96,20 @@ title: My Page
       <div id="page-home">
         <div class="profile-photo"></div>
         <div class="profile-text">
-          <h1>Your Name</h1>
+          <h1>Fatima Kashwani</h1>
         </div>
         <div class="page-body">
           <div class="about">
             <strong>Fatima Kashwani</strong> received her Bachelor’s degree in Biomedical Engineering with honors at Khalifa University in 2021. She is currently pursuing her Master’s degree in Computer Science at Khalifa University. Her main research areas are artificial intelligence, machine learning, and autonomous vehicles. Her thesis project is focused on teleoperation of unmanned vehicles.
           </div>
           <div class="linkage">
-            <a href="https://www.twitch.tv/jzimz" class="link-item twitch">
+            <a href="https://github.com/FatimaKashwani" class="link-item Linkedin">
               <div class="icon"></div>
               <div class="label">Twitch</div>
             </a>
-            <a href="https://discord.gg/aV37twc" class="link-item discord">
+            <a href="https://ae.linkedin.com/in/fatima-kashwani-15081a194" class="link-item GitHub">
               <div class="icon"></div>
               <div class="label">Discord</div>
-            </a>
-            <a href="https://www.instagram.com/jzimz.tv/"
-              class="link-item instagram">
-              <div class="icon"></div>
-              <div class="label">Instagram</div>
-            </a>
-            <a href="https://twitter.com/jzimztv" class="link-item twitter">
-              <div class="icon"></div>
-              <div class="label">Twitter</div>
             </a>
           </div>
         </div>
