--- a/index.html
+++ b/index.html
@@ -1,8 +1,5 @@
 <!-- =^..^= Created by JZimz. Learn more at jzimz.com -->
----
-layout: default
-title: My Page
----
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -103,13 +100,13 @@ title: My Page
             <strong>Fatima Kashwani</strong> received her Bachelor’s degree in Biomedical Engineering with honors at Khalifa University in 2021. She is currently pursuing her Master’s degree in Computer Science at Khalifa University. Her main research areas are artificial intelligence, machine learning, and autonomous vehicles. Her thesis project is focused on teleoperation of unmanned vehicles.
           </div>
           <div class="linkage">
-            <a href="https://github.com/FatimaKashwani" class="link-item Linkedin">
+            <a href="https://github.com/FatimaKashwani" class="link-item GitHub">
               <div class="icon"></div>
-              <div class="label">Twitch</div>
+              <div class="label">Github</div>
             </a>
-            <a href="https://ae.linkedin.com/in/fatima-kashwani-15081a194" class="link-item GitHub">
+            <a href="https://ae.linkedin.com/in/fatima-kashwani-15081a194" class="link-item LinkedIn">
               <div class="icon"></div>
-              <div class="label">Discord</div>
+              <div class="label">LinkedIn</div>
             </a>
           </div>
         </div>
