--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!-- =^..^= Created by JZimz. Learn more at jzimz.com -->
 ---
-layout: default
+layout: merlot
 title: My Page
 ---
 <!DOCTYPE html>
