--- a/index.html
+++ b/index.html
@@ -3,116 +3,4 @@
 layout: merlot
 title: My Page
 ---
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>Fatima Kashwani</title>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300;600&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;900&display=swap" rel="stylesheet">
-    <style>
-      body {
-        font-family: 'Roboto Slab', serif;
-        font-weight: 300;
-        color: #0d0f11;
-      }
-      strong {
-        font-weight: 600;
-      }
-
-      #page-home {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        margin-top: 60px;
-      }
-
-      .profile-photo {
-        width: 130px;
-        height: 130px;
-        background-color: white;
-        border-radius: 50%;
-        background-repeat: no-repeat;
-        background-image: url('assets/Fatima Kashwani Photo.jpg');
-        background-size: 100%;
-      }
-      .profile-photo:hover {
-        background-image: url('assets/Fatima Kashwani Photo.jpg');
-        background-size: 100%;
-      }
-
-      .profile-text h1 {
-        font-family: 'Roboto', sans-serif;
-        font-weight: 900;
-        margin-top: 0.5em;
-        font-size: 2em;
-        text-align: center;
-      }
-
-      .page-body {
-        padding: 0 20px;
-        max-width: 520px;
-      }
-
-      .linkage {
-        font-family: 'Roboto', sans-serif;
-        margin-top: 40px;
-        text-align: center;
-        display: flex;
-        justify-content: space-evenly;
-      }
-
-      .linkage .link-item {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        text-decoration: none;
-        font-weight: 400;
-        color: #0d0f11;
-      }
-
-      .linkage .icon {
-        height: 90px;
-        width: 90px;
-        border-radius: 50%;
-        margin-bottom: 10px;
-        background-color: #0d0f11;
-      }
-
-      @media screen and (max-width: 400px) {
-        .linkage .icon {
-          height: 64px;
-          width: 64px;
-        }
-      }
-
-    </style>
-  </head>
-  <body>
-    <div id="app">
-      <div id="page-home">
-        <div class="profile-photo"></div>
-        <div class="profile-text">
-          <h1>Fatima Kashwani</h1>
-        </div>
-        <div class="page-body">
-          <div class="about">
-            <strong>Fatima Kashwani</strong> received her Bachelor’s degree in Biomedical Engineering with honors at Khalifa University in 2021. She is currently pursuing her Master’s degree in Computer Science at Khalifa University. Her main research areas are artificial intelligence, machine learning, and autonomous vehicles. Her thesis project is focused on teleoperation of unmanned vehicles.
-          </div>
-          <div class="linkage">
-            <a href="https://github.com/FatimaKashwani" class="link-item GitHub">
-              <div class="icon"></div>
-              <div class="label">Github</div>
-            </a>
-            <a href="https://ae.linkedin.com/in/fatima-kashwani-15081a194" class="link-item LinkedIn">
-              <div class="icon"></div>
-              <div class="label">LinkedIn</div>
-            </a>
-          </div>
-        </div>
-      </div>
-    </div>
-  </body>
-</html>
+test
