--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@ layout: merlot
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;900&display=swap" rel="stylesheet">
     <style>
       body {
+        background-color: #FEF5E7;
         font-family: 'Roboto Slab', serif;
         font-weight: 300;
-        color: #0d0f11;
+        color: #5499C7;
       }
       strong {
         font-weight: 600;
@@ -31,7 +32,7 @@ layout: merlot
       .profile-photo {
         width: 130px;
         height: 130px;
-        background-color: white;
+        background-color: #FEF5E7;
         border-radius: 50%;
         background-repeat: no-repeat;
         background-image: url('assets/Fatima Kashwani Photo.jpg');
@@ -69,7 +70,7 @@ layout: merlot
         align-items: center;
         text-decoration: none;
         font-weight: 400;
-        color: #0d0f11;
+        color: #5499C7;
       }
 
       .linkage .icon {
@@ -77,7 +78,7 @@ layout: merlot
         width: 90px;
         border-radius: 50%;
         margin-bottom: 10px;
-        background-color: #0d0f11;
+        background-color: #5499C7;
       }
 
       @media screen and (max-width: 400px) {
