--- a/index.html
+++ b/index.html
@@ -1,7 +1,5 @@
 <!-- =^..^= Created by JZimz. Learn more at jzimz.com -->
----
-layout: merlot
----
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -16,7 +14,7 @@ layout: merlot
         background-color: #FEF5E7;
         font-family: 'Roboto Slab', serif;
         font-weight: 300;
-        color: #5499C7;
+        color: #1F618D;
       }
       strong {
         font-weight: 600;
@@ -70,7 +68,7 @@ layout: merlot
         align-items: center;
         text-decoration: none;
         font-weight: 400;
-        color: #5499C7;
+        color: #1F618D;
       }
 
       .linkage .icon {
@@ -78,7 +76,7 @@ layout: merlot
         width: 90px;
         border-radius: 50%;
         margin-bottom: 10px;
-        background-color: #5499C7;
+        background-color: #1F618D;
       }
 
       @media screen and (max-width: 400px) {
@@ -111,9 +109,15 @@ layout: merlot
               <div class="label">LinkedIn</div>
             </a>
           </div>
+          <video width="640" height="360" controls autoplay loop>
+              <source src="demo_video.mp4" type="video/mp4">
+              Your browser does not support the video tag.
+        </video>
         </div>
       </div>
     </div>
   </body>
 </html>
+
+
 
