--- a/index.html
+++ b/index.html
@@ -27,19 +27,21 @@
         margin-top: 60px;
       }
 
-      .profile-photo {
-        width: 130px;
-        height: 130px;
-        background-color: #FEF5E7;
-        border-radius: 50%;
-        background-repeat: no-repeat;
-        background-image: url('assets/Fatima Kashwani Photo.jpg');
-        background-size: 100%;
-      }
-      .profile-photo:hover {
-        background-image: url('assets/Fatima Kashwani Photo.jpg');
-        background-size: 100%;
-      }
+    .profile-photo {
+  width: 130px;
+  height: 130px;
+  background-color: #FEF5E7;
+  border-radius: 50%;
+  background-repeat: no-repeat;
+  background-image: url('assets/Fatima Kashwani Photo.jpg');
+  background-size: 100%;
+  border: 2px solid #1F618D; /* Set the border color to #1F618D */
+}
+
+.profile-photo:hover {
+  background-image: url('assets/Fatima Kashwani Photo.jpg');
+  background-size: 100%;
+}
 
       .profile-text h1 {
         font-family: 'Roboto', sans-serif;
@@ -110,7 +112,7 @@
             </a>
           </div>
           <video width="640" height="360" controls autoplay loop>
-              <source src="demo_video.mp4" type="video/mp4">
+              <source src="assets/demo_video.mp4" type="video/mp4">
               Your browser does not support the video tag.
         </video>
         </div>
