--- a/index.html
+++ b/index.html
@@ -111,7 +111,8 @@
               <div class="label">LinkedIn</div>
             </a>
           </div>
-          <video width="640" height="360" controls autoplay loop>
+          </div>
+          <video width="320" height="180" controls autoplay loop>
               <source src="assets/demo_video.mp4" type="video/mp4">
               Your browser does not support the video tag.
         </video>
