--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         </div>
         <div class="page-body">
           <div class="about">
-            <strong>Fatima Kashwani</strong> received her Bachelor’s degree in Biomedical Engineering with honors at Khalifa University in 2021. She is currently pursuing her Master’s degree in Computer Science at Khalifa University. Her main research areas are artificial intelligence, machine learning, and autonomous vehicles. Her thesis project is focused on teleoperation of unmanned vehicles.
+            <strong>Fatima Kashwani</strong> received her Bachelor’s degree in Biomedical Engineering with honors at Khalifa University in 2021. She is currently pursuing her Master’s degree in Computer Science at Khalifa University. Her main research areas are artificial intelligence, machine learning, and autonomous vehicles. Her thesis project is focused on teleoperation of unmanned vehicles.Her work is mainly concerned with the development of a predictive display, which assists the teleoperator in real-time teleoperation. This includes the use of a collision-free path, which utilizes lane segmentation and object detection to suggest a driveable path to the teleoperator.
           </div>
           <div class="linkage">
             <a href="https://github.com/FatimaKashwani" class="link-item GitHub">
