--- a/index.html
+++ b/index.html
@@ -49,16 +49,17 @@
         margin-top: 0.5em;
         font-size: 2em;
         text-align: center;
+        margin-bottom: 20px;
       }
 
       .page-body {
-        padding: 0 20px;
+        padding: 0 10px;
         max-width: 520px;
       }
 
       .linkage {
         font-family: 'Roboto', sans-serif;
-        margin-top: 40px;
+        margin-top: 80px;
         text-align: center;
         display: flex;
         justify-content: space-evenly;
