--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
   background-image: url('assets/Fatima Kashwani Photo.jpg');
   background-size: 100%;
 }
+      
 
       .profile-text h1 {
         font-family: 'Roboto', sans-serif;
@@ -102,6 +103,15 @@
           <div class="about">
             <strong>Fatima Kashwani</strong> received her Bachelor’s degree in Biomedical Engineering with honors at Khalifa University in 2021. She is currently pursuing her Master’s degree in Computer Science at Khalifa University. Her main research areas are artificial intelligence, machine learning, and autonomous vehicles. Her thesis project is focused on teleoperation of unmanned vehicles.Her work is mainly concerned with the development of a predictive display, which assists the teleoperator in real-time teleoperation. This includes the use of a collision-free path, which utilizes lane segmentation and object detection to suggest a driveable path to the teleoperator.
           </div>
+          Fatima Kashwani's MSc Thesis is <strong>Augmented Reality for Teleoperation of Unmanned Vehicles Using 5G and Hybrid 2D-3D Approach.</strong> Details here
+          </div>
+        <h1>Research Interests</h1>
+    <ul>
+        <li>Artificial Intelligence</li>
+        <li>Autonomous Vehicles</li>
+        <li>Teleoperation</li>
+        <li>Machine Vision</li>
+    </ul>
           </div>
           <video width="640" height="360" controls autoplay loop>
               <source src="assets/demo_video.mp4" type="video/mp4">
